Lesson 4 Assignment - FINAL COMMIT

--- a/Lesson4_Project1/index.htm
+++ b/Lesson4_Project1/index.htm
@@ -5,8 +5,8 @@
       LIS 2360:  Web Application Development
       Lesson 4 - Project #1
 
-      Author: 
-      Date:   
+      Author: Melanie Rorer
+      Date:   09/25/15
 
       Filename: index.htm
    -->
